# Foundry

./: .coderabbit.yaml  .gitignore  CLAUDE.md  README.md  filter_introspection.py  generate_chosen.py  judge_responses.py  mkdocs.yml  modal_convert_gguf.py  modal_convert_novision.py  modal_generate_eval.py  modal_generate_introspection.py  modal_merge_model.py  modal_serve_madison.py  modal_train_dpo.py  modal_train_orpo.py  modal_train_sft.py  pull_introspection_checkpoints.sh  pyproject.toml
.github/workflows/: docs.yml  test.yml
adapters/madison-orpo-v3b-lr2e5/: README.md  (+2 more)
config/: foundry.yaml
docs/: autoresearch-for-foundry.md  cli-guide.md  eval-analysis-orpo-v3b.md  eval-analysis-orpo-v4.md  eval-lmstudio-vs-vllm.md  founders-debate.md  future-research-denominational-roots.md  index.md  inference-guide.md  introspection-probe-results.md  llama-70b-port-plan.md  madison-constitution-annotated.md  madison-constitution-plan.md  research-sharing-plan.md  scoring-methodology.md  sonnet-vs-finetune-comparison.md  sonnet-vs-finetune-results.md  teacher-comparison-opus-vs-qwen.md  teacher-sonnet-test-results.md  training-methodology.md  training-results.md
sources/: SOURCES.md
templates/: base.html  chat.html  sessions.html
tests/: conftest.py  madison-behavioral-tests.json  test_assemble_dataset.py  test_characters.py  test_config.py  test_create_language_pairs.py  test_db.py  test_evaluate_generate.py  test_evaluate_scoring.py  test_filter_introspection.py  test_format_dpo.py  test_gen_prompts.py  test_inference_client.py  test_server.py  test_teacher.py
(+1766 files in other folders)
